# csv-remapper

./: .gitignore  LICENSE  README.md  pyproject.toml
csv_remapper/: __init__.py  __main__.py  constants.py
csv_remapper/components/: cli.py  decorators.py  dialogs.py  io_handlers.py  models.py  remappers.py  views.py  wizards.py
csv_remapper/resources/: data_editor_ui.ui  main_window_ui.py
csv_remapper/utils/: build_resources.py
csv_remapper/widgets/: compare_window.py  data_editor.py  drag_drop_table.py  main_window.py  template_editor.py
src/: csv_remapper.cmd  csv_remapper.sh
src/csv_remapper/: __main__.py
src/csv_remapper/components/: cli.py  datatypes.py  decorators.py  delegates.py  io_handlers.py  remappers.py  views.py
src/csv_remapper/resources/: _build_resources.py  data_editor_ui.py  main_window_ui.ui  template_editor_ui.py  template_editor_ui.ui
src/csv_remapper/widgets/: data_editor.py
tests/: test_cli.py  test_decorators.py  test_io_handlers.py  test_remappers.py
tests/app_data/Input/Test_Input/: Test_Input.csv  mappings.json
tests/app_data/Output/Test_Output/: Test_Output.csv
tests/app_data/Output/Test_Output/Colours/: Colours.csv  mappings.json
tests/app_data/Output/Test_Output/Extract_email_domain/: Extract_email_domain.csv  mappings.json
tests/app_data/Output/Test_Output/Freq_Ids/: Freq_Ids.csv  mappings.json
tests/app_data/Output/Test_Output/Year_Colours/: mappings.json
tests/csv/: OUT_template_header.csv  OUT_test_expected_output.csv  SECONDARY_frequency_ids.csv  SECONDARY_year_to_colour_mappings.csv
