[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "csv-remapper"
authors = [{name = "Andrej Perfilov", email = "andrej.perfilov@ymail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/p3rfilov/csv-remapper"
