[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "csv-remapper"
authors = [{name = "Andrej Perfilov", email = "andrej.perfilov@ymail.com"}]
requires-python = ">=3.7"
dependencies = [
  "PySide2",
  "python-dateutil"
]
description-file = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/p3rfilov/csv-remapper"

[tool.flit.module]
name = "csv_remapper"

[project.scripts]
csv-remapper = "csv_remapper.__main__:main"
